[tool.poetry]
name = "test-map-ui-data"
version = "0.1.0"
description = ""
authors = ["kyochanpy <nasu.9618.0527@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.31"
polars = "^1.0.0"
boto3 = "^1.34.140"
pydantic = "^2.8.2"
toml = "^0.10.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.1"
mypy = "^1.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
